# triskelion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
client/: Cargo.toml
client/assets/shaders/: arc.wgsl
client/src/: lib.rs  main.rs  plugin.rs
client/src/systems/: dev_dots.rs  input.rs  keybindings.rs  mod.rs
client/src/ui/: arc.rs  bar_fill.rs  character_select.rs  cube.rs  dag.rs  grid.rs  heartbeat.rs  mod.rs  streak.rs  theme.rs  value_lock.rs  wave_interference.rs
client/src/ui/hud/: action_bar.rs  chat.rs  combat_log.rs  damage_numbers.rs  enemy_bars.rs  frames.rs  group_frame.rs  heal_numbers.rs  health_bar.rs  instance_button.rs  minigame_anchor.rs  mod.rs  selection_indicator.rs  target_panel.rs
client/src/world/: camera.rs  controller.rs  death.rs  enemies.rs  instance.rs  mod.rs  players.rs  selection.rs  telegraph.rs  terrain.rs
design_docs/: minigame_spec.md  physical_cube_grid.md  physical_dag_grid.md  subclasses_and_abilities.md
server/: Cargo.toml
server/src/: lib.rs  main.rs  plugin.rs  util.rs
server/src/systems/: chat.rs  combat.rs  connection.rs  dev_dots.rs  enemy.rs  instances.rs  minigame.rs  mob_defs.rs  mod.rs
server/tests/: arc_system.rs  combat_system.rs  cube_system.rs  damage_events_system.rs  death_system.rs  disruption_system.rs  dots_system.rs  enemy_abilities_system.rs  mitigation_system.rs
server/tests/common/: mod.rs
shared/: Cargo.toml
shared/src/: channels.rs  inputs.rs  lib.rs  messages.rs  settings.rs  terrain.rs
shared/src/components/: combat.rs  enemy.rs  instance.rs  mod.rs  player.rs
(+15 files in other folders)
