[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
lightyear = { workspace = true, features = [
    "client",
    "udp",
    "netcode",
    "replication",
    "prediction",
    "interpolation",
] }
shared = { path = "../shared" }
serde = { workspace = true }
avian3d = { workspace = true, features = ["3d", "f32"] }
bevy-tnua = { workspace = true }
bevy-tnua-avian3d = { workspace = true }
fastnoise-lite = { workspace = true }
